add scroll effects

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-    <div id="home">
+    <section id="home">
         <nav id="navbar">
             <img src="images/NavLogo.png" class="nav-logo" alt="longlogo">
             <div class="social-media">
@@ -25,9 +25,7 @@
                     <li><a class="navbar-link active-link" href="#home"><span><i class="fa-solid fa-house"></i></span> Home</a></li>
                     <li><a class="navbar-link" href="#about"><span><i class="fa-solid fa-address-card"></i></span> About me</a></li>
                     <li><a class="navbar-link" href="#services"><span><i class="fa-solid fa-bell-concierge"></i></span> Services</a></li>
-                    <li><a class="navbar-link" href="#websites"><span><i class="fa-solid fa-globe"></i></span> Websites</a></li>
-                    <li><a class="navbar-link" href="#games"><span><i class="fa-solid fa-gamepad"></i></span> Games</a></li>
-                    <li><a class="navbar-link" href="#programs"><span><i class="fa-solid fa-laptop-code"></i></span> Programs</a></li>
+                    <li><a class="navbar-link" href="#my-work"><span><i class="fa-solid fa-briefcase"></i></span> My work</a></li>
                     <li><a class="navbar-link" href="#contact"><span><i class="fa-solid fa-envelope"></i></span> Contact</a></li>
                     <i class="fas fa-solid fa-xmark" onclick="closemenu()"></i>
                 </ul>
@@ -51,34 +49,34 @@
                 </div>
 
                 <div class="home-logo">
-                    <div class="main-logo"><img src="images/logo1.png" class="parallax3D" alt="logo text"></div>
-                    <div class="animate-logo2"><img src="images/logo2.png" class="parallax3D" alt="spinning logo part"></div>
-                    <div class="animate-logo3"><img src="images/logo3.png" class="parallax3D" alt="spinning logo part"></div>
-                    <div class="animate-logo4"><img src="images/logo4.png" class="parallax3D" alt="spinning logo part"></div>
-                    <div class="animate-logo5"><img src="images/logo5.png" class="parallax3D" alt="spinning logo part"></div>
-                    <div class="animate-logo6"><img src="images/logo6.png" class="parallax3D" alt="spinning logo part"></div>
+                    <div class="main-logo"><img src="images/logo1.png" class="parallaxLogo" alt="logo text"></div>
+                    <div class="animate-logo2"><img src="images/logo2.png" class="parallaxLogo" alt="spinning logo part"></div>
+                    <div class="animate-logo3"><img src="images/logo3.png" class="parallaxLogo" alt="spinning logo part"></div>
+                    <div class="animate-logo4"><img src="images/logo4.png" class="parallaxLogo" alt="spinning logo part"></div>
+                    <div class="animate-logo5"><img src="images/logo5.png" class="parallaxLogo" alt="spinning logo part"></div>
+                    <div class="animate-logo6"><img src="images/logo6.png" class="parallaxLogo" alt="spinning logo part"></div>
                 </div>
                 <div class="home-text">
-                    <div>
+                    <div class="parallax-right">
                         <h1>Hi, I'm <span>Jon</span></h1>
                     </div>
-                    <div>
+                    <div class="parallax-left">
                         <p>FULL-STACK DEVELOPER</p>
                         <p>GAME DEVELOPER</p>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+    </section>
     <!----------------about------------------>
-    <div id="about">
+    <section id="about">
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
                     <img src="images/aboutme.png" alt="aboutme">    
                 </div>
                 <div class="about-col-2">
-                    <h1>About me</h1>
+                    <h1><span><i class="fa-solid fa-address-card"></i></span> About me</h1>
 
                     <p>I am an aspiring web developer with a strong foundation in .NET development. I am passionate about coding and always eager to learn. In addition to my formal education, I have independently crafted video games using Unity, which has helped me sharpen my problem-solving skills and provided me with hands-on software development experience.<br><br>Beyond the world of programming, I am also deeply passionate about music and can often be found playing my guitar. My journey in this field is just beginning and I am excited to take on new challenges, collaborate with like-minded individuals and continue expanding my skill set.</p>
 
@@ -158,11 +156,11 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
        <!----------------services------------------>
-    <div id="services">
+    <section id="services">
         <div class="container">
-            <h1>Services</h1>
+            <h1><span><i class="fa-solid fa-bell-concierge"></i></span> Services</a</h1>
             <div class="services-list">
                 <div>
                     <i class="fa-solid fa-code"></i>
@@ -184,12 +182,12 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div id="my-work">
+    </section>
+    <section id="my-work">
         <!----------------websites------------------>
         <div id="websites">
             <div class="container">
-                <h1>Websites</h1>
+                <h1><span><i class="fa-solid fa-globe"></i></span> Websites</h1>
                     <div class="website-list">
                         <div class="website">
                             <img src="images/PatisserieLente.png" alt="Spotify clone">
@@ -233,7 +231,7 @@
         <!----------------games------------------>
         <div id="games">
             <div class="container">
-                <h1>Games</h1>
+                <h1><span><i class="fa-solid fa-gamepad"></i></span> Games</h1>
                     <div class="game-list">
                         <div class="game">
                             <img src="images/game1.png" alt="Flapry blirb game">
@@ -277,7 +275,7 @@
         <!----------------programs------------------>
         <div id="programs">
             <div class="container">
-                <h1>Programs</h1>
+                <h1><span><i class="fa-solid fa-laptop-code"></i></span> Programs</a></h1>
                     <div class="program-list">
                         <div class="program">
                             <img src="images/bookstore.jpg" alt="Bookstore">
@@ -309,9 +307,9 @@
                     </div>    
             </div>
         </div>
-    </div>
+    </section>
        <!----------------contact------------------>
-    <div id="contact">
+    <section id="contact">
         <div class="container">
             <div class="row">
                 <div class="contact-left">
@@ -337,11 +335,14 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
     <div class="copyright">
         <p>Copyright <i class="fa-regular fa-copyright"></i> 2023 Jon Mendizabal</p>
     </div>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/EasePack.min.js"></script>
     <script src="https://kit.fontawesome.com/05049b2b78.js" crossorigin="anonymous"></script>
     <script src="script.js"></script>
 
