--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             <img src="images/NavLogo.png" class="nav-logo" alt="longlogo">
             <div class="social-media">
                 <ul>
-                    <li><a href="https://www.linkedin.com/in/jon-mendizabal" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
-                    <li><a href="https://github.com/Connectslide121" target="_blank"><i class="fa-brands fa-github"></i></a></li>
-                    <li><a href="https://connect-slide-121.itch.io/" target="_blank"><i class="fa-brands fa-itch-io"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/jon-mendizabal" title="LinkedIn" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
+                    <li><a href="https://github.com/Connectslide121" title="GitHub" target="_blank"><i class="fa-brands fa-github"></i></a></li>
+                    <li><a href="https://connect-slide-121.itch.io/" title="Itch-io" target="_blank"><i class="fa-brands fa-itch-io"></i></a></li>
                 </ul>
             </div>
             <div class="nav-links">
@@ -35,19 +35,11 @@
 
         <div class="container">
             <div class="home">
-                <div class="mobile-background">
+                <div class="hero-image">
                     <img src="images/HomeBackground.png" alt="">
+                </div><div class="hero-mobile">
+                    <img src="images/mobileBackground.png" alt="">
                 </div>
-                <div class="background parallaxBackground">
-                    <img src="images/HomeBackground.png" alt="">
-                </div>
-                <div class="blobfixed">
-                    <div class="blobs parallaxBlobs">
-                        <img src="images/blobs.png" alt="">
-                    </div>
-
-                </div>
-
                 <div class="home-logo">
                     <div class="main-logo"><img src="images/logo1.png" class="parallaxLogo" alt="logo text"></div>
                     <div class="animate-logo2"><img src="images/logo2.png" class="parallaxLogo" alt="spinning logo part"></div>
@@ -160,7 +152,7 @@
        <!----------------services------------------>
     <section id="services">
         <div class="container">
-            <h1><span><i class="fa-solid fa-bell-concierge"></i></span> Services</a</h1>
+            <h1><span><i class="fa-solid fa-bell-concierge"></i></span> Services</h1>
             <div class="services-list">
                 <div>
                     <i class="fa-solid fa-code"></i>
@@ -218,7 +210,7 @@
                             <div class="layer">
                                 <h2>My portfolio website</h2>
                                 <p>My personal portfolio website.</p>
-                                <h3>November 2023</h3>
+                                <h3>November 2023 - WIP</h3>
                                 <div class="buttons">
                                     <a href="https://github.com/Connectslide121/Portfolio" target="_blank"><i class="fa-brands fa-github"></i></a>
                                     <a href="https://connectslide121.github.io/Portfolio/" target="_blank"><i class="fa-solid fa-link"></i></a>    
@@ -275,7 +267,7 @@
         <!----------------programs------------------>
         <div id="programs">
             <div class="container">
-                <h1><span><i class="fa-solid fa-laptop-code"></i></span> Programs</a></h1>
+                <h1><span><i class="fa-solid fa-laptop-code"></i></span> Programs</h1>
                     <div class="program-list">
                         <div class="program">
                             <img src="images/bookstore.jpg" alt="Bookstore">
