--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
         <div class="container">
             <div class="row">
                 <div class="contact-left">
-                    <h1>Contact</h1>
+                    <h1><span><i class="fa-solid fa-envelope"></i></span> Contact</h1>
                     <p><i class="fa-solid fa-paper-plane"></i> jonmendi@gmail.com</p>
                     <p><i class="fa-solid fa-square-phone"></i> +46 79-354 10 60</p>
                     <div class="social-media">
