Add anchor tag on logo

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <section id="home">
         <nav id="navbar">
-            <img src="images/NavLogo.png" class="nav-logo" alt="longlogo">
+            <a href="#home"><img src="images/NavLogo.png" class="nav-logo" alt="logo"></a>
             <div class="social-media">
                 <ul>
                     <li><a href="https://www.linkedin.com/in/jon-mendizabal" title="LinkedIn" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
