--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                 <div class="contact-left">
                     <h1><span><i class="fa-solid fa-envelope"></i></span> Contact</h1>
                     <h2>JON MENDIZABAL</h2>
-                    <p><i class="fa-solid fa-paper-plane"></i> jonmendi@gmail.com</p>
+                    <p><i class="fa-solid fa-paper-plane"></i> <a href=mailto:jonmendi@gmail.com>jonmendi@gmail.com</a></p>
                     <p><i class="fa-solid fa-square-phone"></i> +46 79-354 10 60</p>
                     <div class="social-media">
                         <ul>
