add bouncing circles

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="container">
             <div class="home">
                 <div class="hero-image">
-                    <img src="images/HomeBackground.png" alt="">
+                    <!-- <img src="images/HomeBackground.png" alt=""> -->
                 </div><div class="hero-mobile">
                     <img src="images/mobileBackground.png" alt="">
                 </div>
@@ -59,6 +59,7 @@
                 </div>
             </div>
         </div>
+        <div id="circle-container"></div>
     </section>
     <!----------------about------------------>
     <section id="about">
@@ -307,7 +308,7 @@
                 <div class="contact-left">
                     <h1><span><i class="fa-solid fa-envelope"></i></span> Contact</h1>
                     <h2>JON MENDIZABAL</h2>
-                    <p><i class="fa-solid fa-paper-plane"></i> <a href=mailto:jonmendi@gmail.com>jonmendi@gmail.com</a></p>
+                    <p><i class="fa-solid fa-paper-plane"></i> <a href="mailto:jonmendi@gmail.com">jonmendi@gmail.com</a></p>
                     <p><i class="fa-solid fa-square-phone"></i> +46 79-354 10 60</p>
                     <div class="social-media">
                         <ul>
