Add titles on links

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <section id="home">
         <nav id="navbar">
-            <a href="#home"><img src="images/NavLogo.png" class="nav-logo" alt="logo"></a>
+            <a href="#home"><img src="images/NavLogo.png" title="Jon Mendizabal" class="nav-logo" alt="logo"></a>
             <div class="social-media">
                 <ul>
                     <li><a href="https://www.linkedin.com/in/jon-mendizabal" title="LinkedIn" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
@@ -312,10 +312,10 @@
                     <p><i class="fa-solid fa-square-phone"></i> +46 79-354 10 60</p>
                     <div class="social-media">
                         <ul>
-                            <li><a href="https://www.linkedin.com/in/jon-mendizabal" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
-                            <li><a href="https://github.com/Connectslide121" target="_blank"><i class="fa-brands fa-github"></i></a></li>
-                            <li><a href="https://connect-slide-121.itch.io/" target="_blank"><i class="fa-brands fa-itch-io"></i></a></li>
-                        </ul>
+                            <li><a href="https://www.linkedin.com/in/jon-mendizabal" title="LinkedIn" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
+                            <li><a href="https://github.com/Connectslide121" title="GitHub" target="_blank"><i class="fa-brands fa-github"></i></a></li>
+                            <li><a href="https://connect-slide-121.itch.io/" title="Itch-io" target="_blank"><i class="fa-brands fa-itch-io"></i></a></li>
+                                </ul>
                     </div>
                     <a href="images/Jon Mendizabal - Resume.pdf" download class="btn">Download CV</a>
                 </div>
