--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
                     <p>I am an aspiring web developer with a strong foundation in .NET development. I am passionate about coding and always eager to learn. In addition to my formal education, I have independently crafted video games using Unity, which has helped me sharpen my problem-solving skills and provided me with hands-on software development experience.<br><br>Beyond the world of programming, I am also deeply passionate about music and can often be found playing my guitar. My journey in this field is just beginning and I am excited to take on new challenges, collaborate with like-minded individuals and continue expanding my skill set.</p>
 
                     <div class="tab-titles">
-                        <h2 class="tab-links active-link" onclick="opentab('skills')">Skills</h2>
-                        <h2 class="tab-links" onclick="opentab('education')">Education</h2>
-                        <h2 class="tab-links" onclick="opentab('experience')">Experience</h2>
+                        <h2 class="tab-links skills-link active-link" onclick="opentab('skills')">Skills</h2>
+                        <h2 class="tab-links education-link" onclick="opentab('education')">Education</h2>
+                        <h2 class="tab-links experience-link" onclick="opentab('experience')">Experience</h2>
                     </div>
                     <div class="tab-contents skills active-tab" id="skills">
                         <div class="skillcard">
@@ -155,19 +155,19 @@
         <div class="container">
             <h1><span><i class="fa-solid fa-bell-concierge"></i></span> Services</h1>
             <div class="services-list">
-                <div>
+                <div class="service1">
                     <i class="fa-solid fa-code"></i>
                     <h2>Web Design</h2>
                     <p>Elevate your digital experience and captivate your audience with a website that sets you apart.</p>
                     <a href="#contact">Contact me</a>
                 </div>
-                <div>
+                <div class="service2">
                     <i class="fa-solid fa-server"></i>
                     <h2>Backend Solutions</h2>
                     <p>Empower your digital infrastructure with robust backend programming solutions.</p>
                     <a href="#contact">Contact me</a>
                 </div>
-                <div>
+                <div class="service3">
                     <i class="fa-solid fa-ghost"></i>
                     <h2>Game Development</h2>
                     <p>Gaming experiences that push boundaries and keep players coming back for more.</p>
