add sokoban game

--- a/index.html
+++ b/index.html
@@ -263,14 +263,14 @@
                             </div>
                         </div>
                         <div class="game game4">
-                            <video src="images/PlasticSlurg.mp4" type="video/mp4" autoplay muted controls></video>
+                            <video src="images/Sokoban.mp4" type="video/mp4" autoplay muted controls></video>
                             <div class="game-description">
-                                <h2>Plastic Slurg</h2>
-                                <p>2D shooter platformer. A “metal slug” style game made with Unity.</p>
-                                <h3>November 2023</h3>
+                                <h2>Sokoban</h2>
+                                <p>A sokoban game with a built in map converter made with JavaScript. 30 maps and christmas edition available in-game.</p>
+                                <h3>December 2023</h3>
                                 <div class="buttons">
-                                    <a href="https://github.com/Connectslide121/Plastic-Slurg" title="Repository" target="_blank"><i class="fa-brands fa-github"></i></a>
-                                    <a href="https://connect-slide-121.itch.io/plastic-slurg" title="Play game" target="_blank"><i class="fa-brands fa-itch-io"></i></a>    
+                                    <a href="https://github.com/Connectslide121/Sokoban" title="Repository" target="_blank"><i class="fa-brands fa-github"></i></a>
+                                    <a href="https://connectslide121.github.io/Sokoban/" title="Play game" target="_blank"><i class="fa-brands fa-itch-io"></i></a>    
                                 </div>
                             </div>
                         </div>
