add community portal to programs

--- a/index.html
+++ b/index.html
@@ -218,7 +218,8 @@
                                 </div>
                             </div>
                         </div>
-                    </div>    
+                    </div>   
+                     
             </div>
         </div>
         <!----------------games------------------>
@@ -283,15 +284,6 @@
                 <h1><span><i class="fa-solid fa-laptop-code"></i></span> Programs</h1>
                     <div class="program-list">
                         <div class="program program1">
-                            <img src="images/bookstore.jpg" alt="Bookstore">
-                            <div class="program-description">
-                                <h2>Bookstore manager</h2>
-                                <p>A desktop app for managing a book store made with Windows Forms.</p>
-                                <h3>October 2023</h3>
-                                    <a href="https://github.com/Connectslide121/Bookstore-Inventory-Manager-Desktop" title="Repository" target="_blank"><i class="fa-brands fa-github"></i></a>
-                            </div>
-                        </div>
-                        <div class="program program2">
                             <img src="images/lawnmowers.jpg" alt="Lawnmowers">
                             <div class="program-description">
                                 <h2>Lawn mower rental app</h2>
@@ -300,13 +292,22 @@
                                     <a href="https://github.com/Lexicon-Group-4/Lawn-Mower-Rental-App" title="Repository" target="_blank"><i class="fa-brands fa-github"></i></a>
                             </div>
                         </div>
-                        <div class="program program3">
+                        <div class="program program2">
                             <img src="images/vendingmachines.jpg" alt="Vending machines">
                             <div class="program-description">
                                 <h2>Vending machine</h2>
                                 <p>A console app for managing vending machine operations.</p>
                                 <h3>November 2023</h3>
                                     <a href="https://github.com/Connectslide121/Vending-Machine" title="Repository" target="_blank"><i class="fa-brands fa-github"></i></a>
+                            </div>
+                        </div>
+                        <div class="program program3">
+                            <img src="images/Community.png" alt="Vending machines">
+                            <div class="program-description">
+                                <h2>Community portal</h2>
+                                <p>The backend of a community portal site. An API project with a connection to an SQL database using Entity Framework. Frontend coming soon.</p>
+                                <h3>December 2023 - WIP</h3>
+                                    <a href="https://github.com/Lexicon-group-4-Community-portal/CommunityPortal" title="Repository" target="_blank"><i class="fa-brands fa-github"></i></a>
                             </div>
                         </div>
                     </div>    
