--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                             <video src="images/Sokoban.mp4" type="video/mp4" autoplay muted controls></video>
                             <div class="game-description">
                                 <h2>Sokoban</h2>
-                                <p>A sokoban game with a built in map converter made with JavaScript. 30 maps and christmas edition available in-game.</p>
+                                <p>A sokoban game with a built-in map converter made with JavaScript. 30 maps and christmas edition available in-game.</p>
                                 <div class="buttons">
                                     <a href="https://github.com/Connectslide121/Sokoban" title="Repository" target="_blank"><i class="fa-brands fa-github"></i></a>
                                     <a href="https://connectslide121.github.io/Sokoban/" title="Play game" target="_blank"><i class="fa-brands fa-itch-io"></i></a>    
