tweak progress bar

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
     <section id="my-work">
         <!----------------websites------------------>
         <div id="websites">
-            <div class="container">
+            <div class="container work">
                 <h1><span><i class="fa-solid fa-globe"></i></span> Websites</h1>
                     <div class="website-list">
                         <div class="website website1">
@@ -237,7 +237,7 @@
         </div>
         <!----------------games------------------>
         <div id="games">
-            <div class="container">
+            <div class="container work">
                 <h1><span><i class="fa-solid fa-gamepad"></i></span> Games</h1>
                     <div class="game-list">
                         <div class="game game1">
@@ -308,7 +308,7 @@
         </div>
         <!----------------programs------------------>
         <div id="programs">
-            <div class="container">
+            <div class="container work">
                 <h1><span><i class="fa-solid fa-laptop-code"></i></span> Programs</h1>
                     <div class="program-list">
                         <div class="program program1">
