add scroll animation to titles

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         <!----------------websites------------------>
         <div id="websites">
             <div class="container work">
-                <h1><span><i class="fa-solid fa-globe"></i></span> Websites</h1>
+                <h1 id="websitesTitle"><span><i class="fa-solid fa-globe"></i></span> Websites</h1>
                     <div class="website-list">
                         <div class="website website1">
                             <img src="images/PatisserieLente.png" alt="Spotify clone">
@@ -238,7 +238,7 @@
         <!----------------games------------------>
         <div id="games">
             <div class="container work">
-                <h1><span><i class="fa-solid fa-gamepad"></i></span> Games</h1>
+                <h1 id="gamesTitle"><span><i class="fa-solid fa-gamepad"></i></span> Games</h1>
                     <div class="game-list">
                         <div class="game game1">
                             <video src="images/FlapryBlirb.mp4" type="video/mp4" autoplay muted controls></video>
@@ -309,7 +309,7 @@
         <!----------------programs------------------>
         <div id="programs">
             <div class="container work">
-                <h1><span><i class="fa-solid fa-laptop-code"></i></span> Programs</h1>
+                <h1 id="programsTitle"><span><i class="fa-solid fa-laptop-code"></i></span> Programs</h1>
                     <div class="program-list">
                         <div class="program program1">
                             <img src="images/lawnmowers.jpg" alt="Lawnmowers">
