--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                     <li><a class="navbar-link active-link" href="#home"><span><i class="fa-solid fa-house"></i></span> Home</a></li>
                     <li><a class="navbar-link" href="#about"><span><i class="fa-solid fa-address-card"></i></span> About me</a></li>
                     <li><a class="navbar-link" href="#services"><span><i class="fa-solid fa-bell-concierge"></i></span> Services</a></li>
-                    <li><a class="navbar-link" href="#my-work"><span><i class="fa-solid fa-briefcase"></i></span> My work</a></li>
-                    <li><a class="navbar-link" href="#contact"><span><i class="fa-solid fa-envelope"></i></span> Contact</a></li>
+                    <li><a id="myWork" class="navbar-link" href="#my-work"><span><i class="fa-solid fa-briefcase"></i></span> My work</a></li>
+                    <li><a class="navbar-link contactNavLink" href="#contact"><span><i class="fa-solid fa-envelope"></i></span> Contact</a></li>
                     <i class="fas fa-solid fa-xmark" onclick="closemenu()"></i>
                 </ul>
                 <i class="fas fa-solid fa-bars" onclick="openmenu()"></i>
@@ -161,19 +161,19 @@
                     <i class="fa-solid fa-code"></i>
                     <h2>Web Design</h2>
                     <p>Elevate your digital experience and captivate your audience with a website that sets you apart.</p>
-                    <a href="#contact">Contact me</a>
+                    <a class="contactNavLink" href="#contact">Contact me</a>
                 </div>
                 <div class="service2">
                     <i class="fa-solid fa-server"></i>
                     <h2>Backend Solutions</h2>
                     <p>Empower your digital infrastructure with robust backend programming solutions.</p>
-                    <a href="#contact">Contact me</a>
+                    <a class="contactNavLink" href="#contact">Contact me</a>
                 </div>
                 <div class="service3">
                     <i class="fa-solid fa-ghost"></i>
                     <h2>Game Development</h2>
                     <p>Gaming experiences that push boundaries and keep players coming back for more.</p>
-                    <a href="#contact">Contact me</a>
+                    <a class="contactNavLink" href="#contact">Contact me</a>
                 </div>
             </div>
         </div>
@@ -390,6 +390,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/EasePack.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.3/ScrollToPlugin.min.js"></script>
     <script src="https://kit.fontawesome.com/05049b2b78.js" crossorigin="anonymous"></script>
     <script src="script.js"></script>
 
